[package]
name = "snake-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

#console_error_panic_hook = { version = "0.1.6", optional = true }

#wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3"



#crossterm = { version = "0.19" }

#chrono = { version = "0.4" }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
#tui = { version = "0.14", default-features = false, features = ['crossterm'] }
#thiserror = "1.0"

#device_query = "1.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"